# NodeBasedImageEditor

./: .gitignore  CMakeLists.txt  README.md
include/core/: Channel.h  Connection.h  Graph.h  Node.h  Pin.h
include/nodes/: BrightnessNode.h  ImageNode.h
include/ui/: Canvas.h  PropertiesPanel.h
src/: main.cpp
src/core/: Channel.cpp  Connection.cpp  Graph.cpp  Node.cpp  Pin.cpp
src/nodes/: BrightnessNode.cpp  ImageNode.cpp
src/ui/: Canvas.cpp  PropertiesPanel.cpp
